# Web-Application-Development

./: LICENSE
Assignments/HW2/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
Assignments/HW2/blog/: models.py
Assignments/HW2/myproject/: settings.py  urls.py
Assignments/HW3/myproject/: README  pyproject.toml
Assignments/HW3/myproject/blog/: admin.py  forms.py  models.py  views.py
Assignments/HW3/myproject/blog/migrations/: 0001_initial.py
Assignments/HW3/myproject/blog/templates/blog/: index.html  post_add.html  post_detail.html
Assignments/HW3/myproject/blog/templatetags/: menu.py
Assignments/HW3/myproject/myproject/: settings.py  urls.py
Assignments/HW3/myproject/templates/: base.html
Assignments/HW3/myproject/templates/inc/: _footer.html  _header.html
Assignments/HW4/myproject/: Dockerfile  pyproject.toml
Assignments/HW4/myproject/blog/: admin.py  decorators.py  handlers.py  models.py  permissions.py  serializers.py  views.py
Assignments/HW4/myproject/blog/migrations/: 0001_initial.py
Assignments/HW4/myproject/settings/: base.py  urls.py
Final/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
Final/apps/abstracts/: decorators.py  handlers.py  models.py
Final/apps/auths/: serializers.py  views.py
Final/apps/orders/: admin.py  models.py  utils.py  views.py
Final/apps/orders/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_alter_useraddress_options.py  0004_alter_order_status.py
Final/apps/orders/serializers/: categories.py  orders.py  payments.py  products.py  reviews.py  shopping_carts.py
Final/frontend/final/: package-lock.json  package.json
Final/frontend/final/app/: _layout.tsx  index.tsx
Final/frontend/final/app/(account)/addresses/: add.tsx  index.tsx
Final/frontend/final/app/(auth)/: login.tsx  register.tsx
Final/frontend/final/models/: index.ts
Final/frontend/final/services/: addressService.ts  authService.ts  cartService.ts  orderService.ts  paymentService.ts  productService.ts
Final/frontend/final/utils/: apiClient.ts
Final/settings/: base.py  conf.py
Final/settings/env/: local.py
Final/urls/: urls.py
Final/utils/: helpers.py
MidTerm/: .gitignore  db.sqlite3  (+4 more)
(+20 files in other folders)
