[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["Temirbolat <snake2009003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isort = "^5.13.2"
django = "^5.1.1"


[tool.poetry.group.local.dependencies]
django = "^5.1.1"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
