[tool.poetry]
name = "hw3"
version = "0.1.0"
description = ""
authors = ["Temirbolat Maratuly <snake2009003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
